sesion10/academy-fixed/k8s/ingress/ingress.yaml
# Requiere: minikube addons enable ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: academy-ingress
  namespace: academy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: academy.local          # Añadir en /etc/hosts → $(minikube ip) academy.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: academy-api-svc
                port:
                  number: 80
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: academy-api-svc
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: academy-api-svc
                port:
                  number: 80
